[ci skip] compile fix